fix: Align resource, pin, and workshop expandos
The left column is populated by three collapsible sections:
- Resources
- Trade pins
- Workshop

Each collapsible section has a `v` expando controlling
collapsing/expanding. Under the default styling, these `v`s were slightly
misaligned, looking something like:

```
 >
>
 >
```

This commit aligns the expandos, restoring peace and balance to both the known
and unknown universe.

--- a/res/default.css
+++ b/res/default.css
@@ -89,6 +89,7 @@ img.loader {
     width: 25%;
     max-width: 400px;
     min-width: 300px;
+    padding-left: 5px;
     padding-right: 20px;
 
     overflow-y: auto;
@@ -1132,10 +1133,6 @@ a.link.collapse:hover {
 
 .res-toolbar .link.toggled {
     color: darkred;
-}
-
-.res-toolbar.left {
-    padding-left:5px;
 }
 
 .res-table {
